# wolfenstein2026

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
assets/maps/: level1.map  level10.map  level2.map  level3.map  level4.map  level5.map  level6.map  level7.map  level8.map  level9.map
assets/sprites/: ak47.ppm  dual_handgun.ppm  guard_front.ppm  pistol.ppm  shotgun.ppm
package/macos/: build_dmg.sh  icon.ppm  wolf.icns
src/: enemy.c  enemy.h  game.c  game.h  hud.c  input.c  input.h  main.c  map.c  minimap.c  minimap.h  player.c  player.h  raycaster.c  raycaster.h  sprite.c  sprite.h  texture.c  texture.h  weapon.c  weapon.h
src/audio/: sound.c  sound.h
src/core/: difficulty.h  enemy.c  enemy.h  game.c  game.h  item.c  item.h  map.c  map.h  player.c
src/input/: input.c  input.h
src/render/: hud.c  hud.h  item_render.c  item_render.h  minimap.c  minimap.h  raycaster.c  raycaster.h  sprite.c  sprite.h  texture.c  texture.h  weapon.c  weapon.h
src/systems/: save_load.c  save_load.h
src/ui/: font.c  font.h  highscore.c  highscore.h  landing.c  landing.h  menu.c  menu.h  slot_picker.c  slot_picker.h
tools/: gen_ak47.c  gen_guard.c  gen_icon.c  gen_pistol.c  gen_shotgun.c
